<resources>
    <string name="app_name">دليل ودالزاكي</string>
    <string name="search_hint">Enter name or phone number</string>
    <string name="todo">TODO</string>
    <string name="new_account">New account</string>
    <string name="skip">Skip</string>
    <string name="full_name">Full name</string>
    <string name="email_id">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">Signup</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="rating">Rating</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">whatsapp</string>
    <string name="github">github</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="more_apps">More apps</string>
    <string name="about">About</string>
    <string name="send_feedback">Send feedback</string>
    <string name="facebook_app_id">231833271653256</string>
    <!--    <string name="facebook_app_id">877089833180539</string>-->
    <!--    settings-->
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="language">Language</string>
    <string name="select_language">Select the Language</string>
    <string name="restore_default">Restore to default</string>
    <string name="reset_dialoge_title">Reset style</string>
    <string name="reset_dialoge_message">Are you sure you want to Reset App style?</string>
    <string name="chang_lang">Change language</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exist_message">Are you sure you wont to leave the app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="getStarted">Get Started</string>
    <string name="descLogin">Enter your phone number and we will send you an OTP to verify you.</string>
    <string name="descMobile">Mobile No.</string>
    <string name="mobileHint">Phone Number *</string>
    <string name="loginBtnText">Send OTP</string>
    <string name="terms_and_conditions">By Continuing. you agree to publish your number here</string>
    <string name="moreYourself">Tell us a bit more about Yourself</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="empty_field_error_message">Sorry you can not leave this field empty</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="invalid_password">Password must contain at least 1 Capital Alphabet, 1 Number and 1 Special Character.</string>
    <string name="password_length">Password must contain minimum 8 characters</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="passwords_check">Passwords do not match!</string>
    <string name="choise_image">Chose image</string>
    <string name="progress_wait">please Wait…</string>
    <string name="textOtpVer">OTP Verification</string>
    <string name="verify_amp_proceed"><![CDATA[Verify & Proceed]]></string>
    <string name="enter_email_text">Enter your Feedback here</string>
    <string name="phone_hint">Enter your phone number</string>
    <string name="try_another_method">Try with another method</string>
    <string name="open_with">Open with</string>
    <string name="android_developer">Android developer</string>
    <string name="ahmed_khalifa">Ahmed khalifa Gumea</string>
    <string name="credits">Credits</string>
    <string name="source_code">Source code</string>
    <string name="open_source_licenses">OpenSourceLicenses</string>
    <string name="note_the_app">Note about the app</string>
    <string name="version">Version</string>
    <string name="custom_copyright">Made with ❤ by Ahmed Khalifa</string>
    <string name="about_me">About me</string>
    <string name="my_desc">My description</string>
    <string name="contact">Contact</string>
    <string name="profile">The profile</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_the_value">Enter The value</string>
    <string name="confirm">Confirm</string>
    <string name="phone">Phone</string>
    <string name="favorite">Favorite</string>
    <string name="contacts">Contacts</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="enter_phone">Enter the phone number</string>
    <string name="whatsapp_suffix">whatsapp</string>
    <string name="not_installed">عفواً واتساب غير مثبت على جهازك</string>
    <string name="btn_next">التالي</string>
    <string name="hide_my_number">Hide my number</string>
    <string name="show_my_number">Show my number</string>
</resources>