<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.auth.AddInfoActivity"
    android:padding="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/moreYourself"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/open_sans_semibold"/>
<ImageView
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:src="@drawable/no_image"
    android:visibility="gone"
    android:id="@+id/user_selected_image"/>
    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/userinfo_background"
        android:inputType="text"
        android:visibility="gone"

        android:hint="@string/full_name"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/open_sans"/>
    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/userinfo_background"
        android:inputType="phone"
        android:visibility="gone"

        android:hint="@string/phone_hint"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/open_sans"/>
    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"

        android:background="@drawable/userinfo_background"
        android:inputType="textEmailAddress"
        android:hint="@string/email_id"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/open_sans"/>

    <EditText
        android:id="@+id/userAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/userinfo_background"
        android:inputType="text"
        android:visibility="gone"
        android:hint="@string/address"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/open_sans"/>

    <Button
        android:id="@+id/addInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:background="@drawable/login_btn_background"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/white"
        android:textSize="26sp"/>
    </LinearLayout>
</ScrollView>