<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_rounded_bottom_orange">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_arrow_white_24"
                android:layout_margin="30dp"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:fontFamily="@font/sf_bold"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:layout_marginVertical="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="80dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="#00000000">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:gravity="center_vertical"
                        android:layout_margin="10dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/thumbnail"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="@dimen/activity_padding_horizontal"
                            android:padding="1dp"
                            android:src="@drawable/fooda" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/thumbnail"
                            android:ellipsize="end"
                            android:maxLines="1"
                            fontPath="fonts/SF-Medium.otf"
                            android:text="@string/ahmed_khalifa"
                            android:textColor="@color/white"
                            android:textSize="17dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/text_name"
                            android:layout_marginTop="5dp"
                            android:layout_toEndOf="@id/thumbnail"
                            android:textColor="@color/white"
                            android:text="@string/android_developer"
                            android:textSize="14sp"
                            android:maxLines="1"
                            android:ellipsize="end"/>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:background="@color/colorPrimary"
                        android:layout_height="0.5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Social"
                        android:textSize="16sp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"/>

                    <RelativeLayout
                        android:id="@+id/layout_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:clickable="true"
                        android:focusable="true">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Twitter"
                            android:textColor="@color/white"
                            android:layout_centerVertical="true"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_chevron_right_24dp"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layout_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:clickable="true"
                        android:focusable="true">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Github"
                            android:textColor="@color/colorPrimary"
                            android:layout_centerVertical="true"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_chevron_right_24dp"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:background="@color/colorPrimary"
                        android:layout_height="0.5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/credits"
                        android:textSize="16sp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/colorPrimary"/>

                    <RelativeLayout
                        android:id="@+id/layout_source_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/source_code"
                            android:textColor="@color/colorPrimary"
                            android:layout_centerVertical="true"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_chevron_right_24dp"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layout_licenses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/open_source_licenses"
                            android:textColor="@color/colorPrimary"
                            android:layout_centerVertical="true"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_chevron_right_24dp"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layout_playstore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:clickable="true"
                        android:focusable="true"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/note_the_app"
                            android:textColor="@color/colorPrimary"
                            android:layout_centerVertical="true"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_chevron_right_24dp"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:clickable="true"
                        android:focusable="true">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/version"
                            android:textColor="@color/colorPrimary"
                            android:layout_centerVertical="true"/>

                        <TextView
                            android:id="@+id/text_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/colorPrimary"
                            android:src="@drawable/ic_chevron_right_24dp"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="30dp"
                android:text="@string/custom_copyright"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </FrameLayout>

</ScrollView>
